--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./dist/style.css">
 </head>
 <body>
+  <h1>test</h1>
   <script src="./dist/index.js"></script>
 </body>
 </html>
