--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div
-      class="bg-gray-600 h-screen w-screen mt-5 mb-5 p-5 grid grid-cols-2 gap-3"
+      class="bg-gray-600 h-50 w-screen mt-5 mb-5 p-5 grid grid-cols-2 gap-3"
     >
       <div class="bg-gray-400 p-3">
         <div
@@ -52,7 +52,7 @@
         </div>
         <div class="bg-gray-400 mt-5 p-3">
           <div id="cards" class="text-white h-72 overflow-auto">
-            <div class="card grid grid-cols-4 mb-1 gap-1 bg-gray-600">
+            <!-- <div class="grid grid-cols-4 mb-1 gap-1 bg-gray-600">
               <div class="h-20 p-1">
                 <img id="itemImg" class="h-full" />
               </div>
@@ -64,46 +64,7 @@
                 </div>
               </div>
               <div id="itemAmount" class="flex justify-center items-center text-3xl"></div>
-            </div>
-            <div class="card grid grid-cols-4 mb-1 gap-1 bg-gray-600">
-              <div class="h-20 p-1">
-                <img src="./src/img/house-1836070_640.jpg" class="h-full" />
-              </div>
-              <div class="flex flex-col justify-center col-span-2">
-                <p class="text-3xl">House</p>
-                <div class="flex mt-1">
-                  <p>$20,000,000</p>
-                  <p class="text-green-400 ml-14">+$32,000 / sec</p>
-                </div>
-              </div>
-              <div class="flex justify-center items-center text-3xl">2</div>
-            </div>
-            <div class="card grid grid-cols-4 mb-1 gap-1 bg-gray-600">
-              <div class="h-20 p-1">
-                <img src="./src/img/house-1836070_640.jpg" class="h-full" />
-              </div>
-              <div class="flex flex-col justify-center col-span-2">
-                <p class="text-3xl">House</p>
-                <div class="flex mt-1">
-                  <p>$20,000,000</p>
-                  <p class="text-green-400 ml-14">+$32,000 / sec</p>
-                </div>
-              </div>
-              <div class="flex justify-center items-center text-3xl">2</div>
-            </div>
-            <div class="card grid grid-cols-4 mb-1 gap-1 bg-gray-600">
-              <div class="h-20 p-1">
-                <img src="./src/img/house-1836070_640.jpg" class="h-full" />
-              </div>
-              <div class="flex flex-col justify-center col-span-2">
-                <p class="text-3xl">House</p>
-                <div class="flex mt-1">
-                  <p>$20,000,000</p>
-                  <p class="text-green-400 ml-14">+$32,000 / sec</p>
-                </div>
-              </div>
-              <div class="flex justify-center items-center text-3xl">2</div>
-            </div>
+            </div> -->
           </div>
           
           <div id="active" class="h-72 bg-gray-600 text-white p-3 hidden">
@@ -165,6 +126,6 @@
       </div>
     </div>
     <script>var exports = {};</script>
-    <script src="./dist/index.js"></script>
+    <script src="./dist/main.js"></script>
   </body>
 </html>
