--- a/index.html
+++ b/index.html
@@ -27,19 +27,18 @@
             Welcome Click Empire Game
           </h2>
         </div>
-        <form class="mt-8 space-y-6" action="#" method="POST">
+        <form class="mt-8 space-y-6">
           <div class="rounded-md shadow-sm -space-y-px">
             <div>
               <label for="user-name" class="sr-only">User name</label>
               <input id="userName" name="userName" type="text" autocomplete="name" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="User name">
             </div>
           </div>
-
           <div class="grid grid-cols-2 gap-2">
-            <button id="newGame" type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <button id="startGameBtn" type="submit" class="btn group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
               New Game
             </button>
-            <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <button id="loginBtn" type="submit" class="btn group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
               Login
             </button>
           </div>
@@ -112,7 +111,7 @@
         </div>
       </div>
     </div>
-    <script>var exports = {};</script>
+    <!-- <script>var exports = {};</script> -->
     <script src="./dist/main.js"></script>
   </body>
 </html>
