ハンバーガークリックでカウントするようにした

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             place-content-center place-items-center
           "
         >
-          <div id="title" class="text-white text-xl">1,102 Burgers</div>
+          <div id="burger" class="text-white text-xl"></div>
           <div id="mini-title" class="text-white text-base">$25 per second</div>
         </div>
         <div class="h-72 flex flex-col items-center mt-10">
