--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <i class="fas fa-redo-alt"></i>
           </div>
           <div
+            id="save"
             class="
               text-3xl text-white
               border border-white
