stockのロジックを作成

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           "
         >
           <div id="burger" class="text-white text-xl"></div>
-          <div id="mini-title" class="text-white text-base">$25 per second</div>
+          <div id="perBurgerIncome" class="text-white text-base"></div>
         </div>
         <div class="h-72 flex flex-col items-center mt-10">
           <img
