--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         </div>
         <div class="flex justify-end mt-3">
           <div
+            id="reset"
             class="
               text-3xl text-white
               border border-white
