--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Click Empire</title>
-    <link rel="stylesheet" href="./public/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script
       defer
       src="node_modules/@fortawesome/fontawesome-free/js/brands.min.js"
@@ -159,7 +159,7 @@
         <div class="h-72 flex flex-col items-center mt-10">
           <img
             id="img"
-            src="./src/img/hamburger-31775_1280.png"
+            src="./hamburger-31775_1280.png"
             class="h-full"
           />
         </div>
@@ -225,6 +225,6 @@
       </div>
     </div>
 
-    <script src="./public/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
