--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Click Empire</title>
+    <script src="https://kit.fontawesome.com/dabd3349b6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" />
-    <script
-      defer
-      src="node_modules/@fortawesome/fontawesome-free/js/brands.min.js"
-    ></script>
-    <script
-      defer
-      src="/node_modules/@fortawesome/fontawesome-free/js/solid.min.js"
-    ></script>
-    <script
-      defer
-      src="/node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"
-    ></script>
   </head>
   <body>
     <div
@@ -134,7 +123,7 @@
       id="mainPage"
       class="
         bg-gray-600
-        h-50
+        h-screen
         w-screen
         mt-5
         mb-5
