--- a/public/index.html
+++ b/public/index.html
@@ -145,15 +145,15 @@
           <div id="burger" class="text-white text-xl"></div>
           <div id="perBurgerIncome" class="text-white text-base"></div>
         </div>
-        <div class="h-72 flex flex-col items-center mt-10">
+        <div class="h-72 flex flex-col items-center mt-32">
           <img
             id="img"
             src="./hamburger-31775_1280.png"
-            class="h-full"
+            class="h-full m-10"
           />
         </div>
       </div>
-      <div class="flex flex-col">
+      <div class="flex flex-col h-full">
         <div class="bg-gray-400 h-24 grid grid-cols-2 gap-1 p-2 text-white">
           <div
             id="name"
@@ -172,8 +172,8 @@
             class="bg-gray-600 flex justify-center items-center"
           ></div>
         </div>
-        <div id="cardContainer" class="bg-gray-400 mt-5 p-3">
-          <div id="cards" class="text-white h-72 overflow-auto"></div>
+        <div id="cardContainer" class="bg-gray-400 mt-5 p-3 flex-grow">
+          <div id="cards" class="text-white overflow-auto"></div>
 
           <div
             id="cardInfo"
